--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "passport-oauth2-client-password": "0.1.2",
     "raw-body": "2.1.5",
     "redis": "^2.4.2",
+    "request": "^2.69.0",
     "semver": "5.1.0",
     "sentiment": "1.0.5",
     "uglify-js": "2.6.1",
