--- a/app.json
+++ b/app.json
@@ -3,5 +3,6 @@
   "description": "One click deployment rules, workflow, and integration engine for Xively.",
   "repository": "https://github.com/apiguy/habanero",
   "logo": "https://node-js-sample.herokuapp.com/node.png",
-  "keywords": ["xively", "iot"]
+  "keywords": ["xively", "iot"],
+  "addons": ["heroku-redis:hobby-dev"]
 }
