--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "follow-redirects": "0.0.7",
     "fs-extra": "0.26.4",
     "fs.notify": "0.0.4",
+    "grunt": "0.4.5",
+    "grunt-cli": "0.1.13",
     "i18next": "1.10.6",
     "is-utf8": "0.2.1",
     "media-typer": "0.3.0",
