--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "start": "node red.js",
     "test": "./node_modules/.bin/grunt",
-    "postinstall": "grunt setDevEnv"
+    "postinstall": "grunt build"
   },
   "bin": {
     "node-red": "./red.js",
@@ -69,13 +69,7 @@
     "uglify-js": "2.6.1",
     "when": "3.7.7",
     "ws": "0.8.1",
-    "xml2js": "0.4.16"
-  },
-  "optionalDependencies": {
-    "node-red-node-serialport": "0.1.*",
-    "bcrypt": "0.8.5"
-  },
-  "devDependencies": {
+    "xml2js": "0.4.16",
     "grunt": "0.4.5",
     "grunt-chmod": "1.1.1",
     "grunt-cli": "0.1.13",
@@ -90,7 +84,13 @@
     "grunt-jsonlint": "1.0.7",
     "grunt-nodemon": "0.4.1",
     "grunt-sass": "1.1.0",
-    "grunt-simple-mocha": "0.4.1",
+    "grunt-simple-mocha": "0.4.1"
+  },
+  "optionalDependencies": {
+    "node-red-node-serialport": "0.1.*",
+    "bcrypt": "0.8.5"
+  },
+  "devDependencies": {
     "mocha": "2.3.4",
     "should": "6.0.3",
     "sinon": "1.17.2",
