--- a/package.json
+++ b/package.json
@@ -49,8 +49,10 @@
     "media-typer": "0.3.0",
     "mqtt": "1.6.3",
     "mustache": "2.2.1",
+    "node-red-contrib-xively": "0.0.3",
     "node-red-node-email": "0.1.*",
     "node-red-node-feedparser": "0.1.*",
+    "node-red-node-forecastio": "^0.1.3",
     "node-red-node-rbe": "0.1.*",
     "node-red-node-twitter": "0.1.*",
     "nopt": "3.0.6",
