--- a/package.json
+++ b/package.json
@@ -46,13 +46,26 @@
     "fs-extra": "0.26.4",
     "fs.notify": "0.0.4",
     "grunt": "0.4.5",
+    "grunt-chmod": "1.1.1",
     "grunt-cli": "0.1.13",
+    "grunt-concurrent": "2.1.0",
+    "grunt-contrib-clean": "0.7.0",
+    "grunt-contrib-compress": "0.14.0",
+    "grunt-contrib-concat": "0.5.1",
+    "grunt-contrib-copy": "0.8.2",
+    "grunt-contrib-jshint": "0.12.0",
+    "grunt-contrib-uglify": "0.11.0",
+    "grunt-contrib-watch": "0.6.1",
+    "grunt-jsonlint": "1.0.7",
+    "grunt-nodemon": "0.4.1",
+    "grunt-sass": "1.1.0",
+    "grunt-simple-mocha": "0.4.1",
     "i18next": "1.10.6",
     "is-utf8": "0.2.1",
     "media-typer": "0.3.0",
     "mqtt": "1.6.3",
     "mustache": "2.2.1",
-    "node-red-contrib-xively": "0.0.5",
+    "node-red-contrib-xively": "0.1.0",
     "node-red-node-email": "0.1.*",
     "node-red-node-feedparser": "0.1.*",
     "node-red-node-forecastio": "^0.1.3",
@@ -72,22 +85,7 @@
     "uglify-js": "2.6.1",
     "when": "3.7.7",
     "ws": "0.8.1",
-    "xml2js": "0.4.16",
-    "grunt": "0.4.5",
-    "grunt-chmod": "1.1.1",
-    "grunt-cli": "0.1.13",
-    "grunt-concurrent": "2.1.0",
-    "grunt-contrib-clean": "0.7.0",
-    "grunt-contrib-compress": "0.14.0",
-    "grunt-contrib-concat": "0.5.1",
-    "grunt-contrib-copy": "0.8.2",
-    "grunt-contrib-jshint": "0.12.0",
-    "grunt-contrib-uglify": "0.11.0",
-    "grunt-contrib-watch": "0.6.1",
-    "grunt-jsonlint": "1.0.7",
-    "grunt-nodemon": "0.4.1",
-    "grunt-sass": "1.1.0",
-    "grunt-simple-mocha": "0.4.1"
+    "xml2js": "0.4.16"
   },
   "optionalDependencies": {
     "node-red-node-serialport": "0.1.*",
