--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "cors":"2.7.1",
         "cron":"1.1.0",
         "express": "4.13.4",
+        "feedparser": "1.1.3",
         "follow-redirects":"0.0.7",
         "fs-extra": "0.26.7",
         "fs.notify":"0.0.4",
@@ -67,7 +68,6 @@
         "when": "3.7.7",
         "ws": "0.8.1",
         "xml2js":"0.4.16",
-        "node-red-node-feedparser":"0.1.*",
         "node-red-node-email":"0.1.*",
         "node-red-node-twitter":"0.1.*",
         "node-red-node-rbe":"0.1.*",
