build postinstall change

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 
     "name"         : "node-red-habanero",
-    "version"      : "0.13.4",
+    "version"      : "1.0.1",
     "description"  : "A visual tool for wiring the Internet of Things",
     "homepage"     : "https://xively.com",
     "license"      : "Apache-2.0",
@@ -13,7 +13,7 @@
     "scripts"      : {
         "start": "node red.js",
         "test": "./node_modules/.bin/grunt",
-        "postinstall": "grunt build"
+        "postinstall": "npm install && grunt build"
     },
     "bin"          : {
         "node-red": "./red.js",
