call it orchestrator

--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Xively Habanero",
+  "name": "Xively Orchestrator",
   "description": "One click deployment rules, workflow, and integration engine for Xively.",
   "repository": "https://github.com/xively/habanero",
   "logo": "https://node-js-sample.herokuapp.com/node.png",
