--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-habanero",
-  "version": "1.0.18",
+  "version": "1.0.19",
   "description": "A visual tool for wiring the Internet of Things",
   "homepage": "https://xively.com",
   "license": "Apache-2.0",
@@ -35,9 +35,11 @@
     "clone": "1.0.2",
     "cors": "2.7.1",
     "cron": "1.1.0",
+    "dot-object": "1.4.1",
     "express": "4.13.4",
     "feedparser": "1.1.3",
     "follow-redirects": "0.0.7",
+    "fs": "0.0.2",
     "fs-extra": "0.26.7",
     "fs.notify": "0.0.4",
     "grunt": "0.4.5",
@@ -57,24 +59,30 @@
     "grunt-simple-mocha": "0.4.1",
     "i18next": "1.10.6",
     "is-utf8": "0.2.1",
+    "jsforce": "^1.6.0",
+    "lodash": "4.6.1",
     "media-typer": "0.3.0",
+    "merge": "1.2.0",
     "mqtt": "1.7.4",
     "mustache": "2.2.1",
-    "node-red-contrib-xively": ">=0.1.55",
     "node-red-node-email": "0.1.*",
     "node-red-node-rbe": "0.1.*",
     "node-red-node-twitter": "0.1.*",
+    "node-uuid": "1.4.7",
     "nopt": "3.0.6",
     "oauth2orize": "1.2.2",
     "on-headers": "1.0.1",
     "passport": "0.3.2",
     "passport-http-bearer": "1.0.1",
     "passport-oauth2-client-password": "0.1.2",
+    "path": "0.12.7",
     "raw-body": "2.1.6",
-    "redis": "^2.6.0-1",
+    "redis": "2.6.1",
+    "request": "2.69.0",
     "semver": "5.1.0",
     "sentiment": "1.0.6",
     "uglify-js": "2.6.2",
+    "url": "0.11.0",
     "when": "3.7.7",
     "ws": "0.8.1",
     "xml2js": "0.4.16"
