--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-habanero",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "A visual tool for wiring the Internet of Things",
   "homepage": "https://xively.com",
   "license": "Apache-2.0",
@@ -60,6 +60,7 @@
     "i18next": "1.10.6",
     "is-utf8": "0.2.1",
     "jsforce": "^1.6.0",
+    "knex": "0.11.7",
     "lodash": "4.6.1",
     "media-typer": "0.3.0",
     "merge": "1.2.0",
@@ -76,8 +77,8 @@
     "passport-http-bearer": "1.0.1",
     "passport-oauth2-client-password": "0.1.2",
     "path": "0.12.7",
+    "pg": "5.1.0",
     "raw-body": "2.1.6",
-    "redis": "2.6.1",
     "request": "2.69.0",
     "semver": "5.1.0",
     "sentiment": "1.0.6",
