--- a/package.json
+++ b/package.json
@@ -68,7 +68,6 @@
     "node-red-node-email": "0.1.*",
     "node-red-node-rbe": "0.1.*",
     "node-red-node-twitter": "0.1.*",
-    "node-uuid": "1.4.7",
     "nopt": "3.0.6",
     "oauth2orize": "1.2.2",
     "on-headers": "1.0.1",
@@ -83,6 +82,7 @@
     "sentiment": "1.0.6",
     "uglify-js": "2.6.2",
     "url": "0.11.0",
+    "uuid": "^3.0.0",
     "when": "3.7.7",
     "ws": "0.8.1",
     "xml2js": "0.4.16"
